--- a/styles/variables.css
+++ b/styles/variables.css
@@ -11,10 +11,13 @@
   /* text scheme */
   --logo-font: "Satisfy", cursive;
   --logo-shadow: 2px 2px 8px rgba(0, 0, 0, 0.15);
+  --textSize-section-title: 2rem;
+  --textSize-card-title: 1.25rem;
 
   /* layout setting */
   --header-height: 75px;
   --header-border-size: 5px;
   --header-margin-size: 5px;
   --main-shadow-style: 8px 3px 10px 6px rgba(0, 0, 0, 0.1);
+  --card-border-style: 1px solid #f3f3f3;
 }
