--- a/styles/career.css
+++ b/styles/career.css
@@ -1,5 +1,6 @@
 /* Home Content layout*/
 @import url("variables.css");
+@import url("cv.css");
 
 nav ul li a#career {
   text-decoration: underline;
@@ -12,6 +13,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: relative;
 }
 
 .intro,
@@ -30,13 +32,11 @@ main {
   display: flex;
   justify-content: center;
   width: 80%;
-}
-.intro-text p {
   font-size: 16px;
   color: var(--text-secondary-color);
   line-height: 1.5;
   padding-left: 15px;
-  width: 80%;
+  margin-top: 15px;
 }
 
 .intro-text a {
@@ -250,4 +250,58 @@ main {
 
 .card-employment-table .timeline-item .employer {
   font-weight: bold;
+}
+
+/* styling for toggle switch */
+.cv-switch {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  display: flex;
+  align-items: center;
+}
+.cv-switch label {
+  margin-right: 10px;
+  font-size: 16px;
+  color: var(--text-secondary-color);
+  line-height: 1.5;
+}
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 42px;
+  height: 24px;
+}
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+  border-radius: 34px;
+}
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 18px;
+  width: 18px;
+  left: 3px;
+  bottom: 3px;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+input:checked + .slider {
+  background-color: #4caf50;
+}
+input:checked + .slider:before {
+  transform: translateX(18px);
 }
