Remove unused cv.html as this has been combined with career.html. Rename css for cv as career-cv, to make it clearer that this belongs to career page.

--- a/styles/career.css
+++ b/styles/career.css
@@ -1,6 +1,6 @@
 /* Home Content layout*/
 @import url("variables.css");
-@import url("cv.css");
+@import url("career_cv.css");
 
 nav ul li a#career {
   text-decoration: underline;
