--- a/styles/career.css
+++ b/styles/career.css
@@ -31,6 +31,8 @@ main {
 .intro-text {
   display: flex;
   justify-content: center;
+  align-items: center;
+  text-align: center;
   width: 80%;
   font-size: 16px;
   color: var(--text-secondary-color);
