--- a/styles/projects.css
+++ b/styles/projects.css
@@ -22,8 +22,6 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* background-color: var(--section-bg-color);
-  opacity: 95%; */
   width: 100%;
   margin-top: 15px;
 }
@@ -31,13 +29,14 @@ main {
 .intro-text {
   display: flex;
   justify-content: center;
-}
-.intro-text p {
+  align-items: center;
+  text-align: center;
   font-size: 16px;
   color: var(--text-secondary-color);
   line-height: 1.5;
   padding-left: 15px;
   width: 80%;
+  margin-top: 15px;
 }
 
 /* self-learning sections */
