--- a/styles/variables.css
+++ b/styles/variables.css
@@ -19,5 +19,7 @@
   --header-border-size: 5px;
   --header-margin-size: 5px;
   --main-shadow-style: 8px 3px 10px 6px rgba(0, 0, 0, 0.1);
+  --select-shadow-style: 8px 3px 10px 6px rgba(0, 0, 0, 0.2);
   --card-border-style: 1px solid #f3f3f3;
+  --card-select-style: 1px solid #e4e4e4fd;
 }
