--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,15 +11,17 @@ body {
   background-color: var(--main-bg-color);
 }
 
+/* header section ------------------------------------ */
 header {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   align-items: center;
-  height: 75px;
-  width: 70%;
-  margin: var(--header-margin-size);
+  height: var(--header-height);
+  width: 100%;
+  max-width: 1330px;
+  margin: var(--header-margin-size) auto;
   background-color: var(--main-bg-color);
-  /* opacity: 100%; */
   border-bottom: var(--header-border-size) solid var(--theme-color);
   position: sticky;
   top: 0;
@@ -29,7 +31,7 @@ header {
 .logo {
   font-size: 50px;
   font-weight: 400;
-  padding-left: 15px;
+  padding: 0px 0px 0px 15px;
   text-shadow: var(--logo-shadow);
   font-family: var(--logo-font);
   color: var(--theme-color);
@@ -38,7 +40,7 @@ header {
 nav ul {
   list-style: none;
   margin: 0;
-  padding-right: 15px;
+  padding: 0px 15px 0px 0px;
   display: flex;
   font-size: 1.25rem;
 }
@@ -58,16 +60,61 @@ nav ul li a:hover {
   color: var(--theme-color);
 }
 
+@media (max-width: 768px) {
+  .logo {
+    font-size: 35px;
+  }
+
+  nav {
+    position: relative; /*to position menu item below menu-icon*/
+  }
+  nav ul {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    background-color: var(--main-bg-color);
+    opacity: 0.95;
+    padding: 5px 25px 5px 10px;
+    border-top: 2px solid #e4e4e4fd;
+  }
+
+  nav ul li {
+    margin: 0px;
+    padding: 5px 0px;
+  }
+
+  nav ul li a {
+    font-size: 0.9rem;
+    color: var(--text-secondary-color);
+  }
+
+  .menu-icon {
+    display: block;
+    cursor: pointer;
+    font-size: 1.25rem;
+    color: var(--text-secondary-color);
+    font-weight: bold;
+    padding: 0px 15px 0px 0px;
+  }
+}
+
+@media (min-width: 769px) {
+  .menu-icon {
+    display: none;
+  }
+  nav ul {
+    display: flex;
+  }
+}
+/* end of header section ------------------------------------ */
+
 main {
-  /* display: flex;
-  justify-content: center; */
-  width: 70%;
+  width: 100%;
+  max-width: 1330px;
   min-height: calc(
     100vh - var(--header-height) - var(--header-border-size) -
       var(--header-margin-size) * 2
   );
   background-color: var(--section-bg-color);
   box-shadow: var(--main-shadow-style);
-  /* background-image: url("assets/background_image.jpg"); */
-  /* background-size: cover; */
 }
