--- a/styles/career.css
+++ b/styles/career.css
@@ -73,6 +73,9 @@ main {
   flex-direction: column;
   align-items: center;
   width: 40%;
+  min-width: 320px; /* Minimum width for the card */
+  max-width: 420px; /* Maximum width for the card */
+  flex-grow: 1; /* Allow cards to grow */
   border: var(--card-boder-style);
   border-radius: 10px;
   box-shadow: var(--main-shadow-style);
@@ -306,4 +309,13 @@ input:checked + .slider {
 }
 input:checked + .slider:before {
   transform: translateX(18px);
+}
+
+/* Media query for smaller screens */
+@media (max-width: 900px) {
+  .card-skills,
+  .card-technologies,
+  .card-employment {
+    width: 100%; /* Make the card take full width */
+  }
 }
