--- a/styles/home.css
+++ b/styles/home.css
@@ -12,6 +12,7 @@ nav ul li a#home {
   display: flex;
   align-items: flex-start;
   justify-content: center;
+  flex-wrap: wrap;
   background-color: var(--section-bg-color);
   opacity: 95%;
   width: 100%;
@@ -20,7 +21,7 @@ nav ul li a#home {
 
 .intro img {
   border-radius: 10px;
-  margin-right: 50px;
+  margin-right: 15px;
   height: 300px;
   object-fit: contain;
   box-shadow: var(--main-shadow-style);
@@ -28,6 +29,7 @@ nav ul li a#home {
 
 .intro-text {
   max-width: 600px;
+  padding: 15px 15px;
 }
 
 .intro-text h1 {
