--- a/styles/projects.css
+++ b/styles/projects.css
@@ -60,16 +60,23 @@ nav ul li a#projects {
 
 .card-learn,
 .card-projects,
-.card-future-exploration {
+.card-future-exploration,
+.card-projects-placeholder {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 40%;
+  min-width: 320px; /* Minimum width for the card */
+  flex-grow: 1; /* Allow cards to grow */
   border: var(--card-boder-style);
   box-shadow: var(--main-shadow-style);
   padding: 25px;
   margin: 25px;
   border-radius: 10px;
+}
+
+.card-projects-placeholder {
+  justify-content: center;
 }
 
 .card-future-exploration {
@@ -87,6 +94,11 @@ nav ul li a#projects {
 
 .card-learn-img,
 .card-projects-img {
+  height: 200px;
+  object-fit: scale-down;
+}
+
+.card-projects-placeholder .card-projects-img {
   height: 200px;
   object-fit: scale-down;
 }
@@ -133,4 +145,39 @@ nav ul li a#projects {
   height: 32px;
   margin: 0px 10px 0px 10px;
   box-shadow: none;
+}
+
+/* Media query for smaller screens */
+@media (min-width: 420px) and (max-width: 768px) {
+  .card-learn,
+  .card-projects,
+  .card-future-exploration,
+  .card-projects-placeholder {
+    width: 80%; /* Make the card width bigger */
+    min-width: 280px;
+    padding: 25px 20px;
+  }
+
+  .card-learn-wrapper,
+  .card-projects-wrapper {
+    padding: 0px;
+  }
+}
+
+/* For even smaller size. Reduce more margin size for projects card. */
+@media (max-width: 420px) {
+  .card-learn,
+  .card-projects,
+  .card-future-exploration,
+  .card-projects-placeholder {
+    width: 80%;
+    min-width: 200px;
+    padding: 25px 5px;
+    margin: 25px 5px;
+  }
+
+  .card-learn-wrapper,
+  .card-projects-wrapper {
+    padding: 0px;
+  }
 }
