--- a/styles/interests.css
+++ b/styles/interests.css
@@ -7,12 +7,6 @@ nav ul li a#interests {
   color: var(--theme-color);
 }
 
-main {
-  display: flex;
-  flex-direction: column;
-  /* justify-content: center; */
-}
-
 .intro,
 .upcoming-activities,
 .past-activities {
@@ -20,7 +14,6 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
   margin-top: 15px;
 }
 
@@ -45,7 +38,6 @@ main {
   font-size: var(--textSize-section-title);
   font-weight: bold;
   margin: 15px 0px 15px 0px;
-  width: 100%;
 }
 
 .card-upcoming {
@@ -71,7 +63,6 @@ main {
   color: var(--text-secondary-color);
   line-height: 1.25;
   list-style-type: disc;
-  /* padding-left: 40px; */
 }
 
 .card-past-text {
@@ -96,8 +87,6 @@ main {
   justify-content: center;
   flex-wrap: wrap;
   margin-top: 30px;
-  padding: 0px 10% 0px 10%;
-  width: 95%;
 }
 
 .card-past-header {
@@ -118,6 +107,8 @@ main {
   flex-direction: column;
   align-items: flex-start;
   width: 300px;
+  min-width: 300px;
+  flex-grow: 1;
   border: var(--card-boder-style);
   box-shadow: var(--main-shadow-style);
   padding: 25px;
@@ -139,4 +130,19 @@ main {
   color: var(--theme-color);
   font-weight: bolder;
   padding: 0px 2px 0px 2px;
+}
+
+/* Media query for smaller screens */
+@media (min-width: 420px) and (max-width: 768px) {
+  .card-past {
+    padding: 25px 20px;
+  }
+}
+
+/* For even smaller size. Reduce more margin size for projects card. */
+@media (max-width: 420px) {
+  .card-past {
+    padding: 25px 5px;
+    margin: 25px 5px;
+  }
 }
