Add new interest sub page for freediving compettive training and personal bests.

--- a/src/styles/interests_sub_pages.css
+++ b/src/styles/interests_sub_pages.css
@@ -71,7 +71,7 @@ nav ul li a#interests {
 
 .card iframe {
   width: 80%;
-  height: 415px;
+  /* height: 415px; */
   min-width: 280px;
   box-shadow: var(--main-shadow-style);
   border: none;
